--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <meta name="description" content="welcome to Kaviees Construction, a trusted destination for builders and civil engineers. Best civil engineer in Ottanchatram. Experienced builder constructed over 20+ projects completed">
+    <meta name="keywords" content="Building Contractors, Builders, Civil Engineers, Infrastructure Development, Building Design, Commercial Construction, Renovation Services, Residential Construction, Civil Engineering Consultancy, Ottanchatram, oddanchatram, kallimandayam, odaipatti, house construction, house builders in Ottanchatram">
+    <link rel="canonical" href="http://kaviees.in/">
     <title>Kaviees Construction</title>
 
     <!-- Bootstrap CSS -->
@@ -87,7 +89,7 @@
             </div>
             <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12">
               <div class="intro-img">
-                <img class="img-fluid" src="assets/img/intro-mobile.png" alt="">
+                <img class="img-fluid" src="assets/img/intro-mobile.png" alt="building">
               </div>            
             </div>
           </div> 
@@ -168,7 +170,7 @@
             </div>
           </div>
           <div class="col-lg-6 col-md-12 col-xs-12 wow fadeInRight" data-wow-delay="0.3s">
-            <img class="img-fluid" src="assets/img/about/img-1.png" alt="" >
+            <img class="img-fluid" src="assets/img/about/img-1.png" alt="builders" >
           </div>
         </div>
       </div>
@@ -216,7 +218,7 @@
           </div>
           <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
             <div class="show-box wow fadeInUp" data-wow-delay="0.3s">
-              <img src="assets/img/feature/building-contruction.jpg" alt="">
+              <img src="assets/img/feature/building-contruction.jpg" alt="innovative house">
             </div>
           </div>
           <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
@@ -262,22 +264,22 @@
             <div id="galleries" class="owl-carousel wow fadeInUp" data-wow-delay="1.2s">
               <div class="item">
                   <div class="img-thumb">
-                    <img src="assets/img/gallery/2022_09_17_2.jpeg" alt="">
+                    <img src="assets/img/gallery/2022_09_17_2.jpeg" alt="kothayam house">
                   </div>
               </div>
               <div class="item">
                   <div class="img-thumb">
-                    <img src="assets/img/gallery/IMG_20230716_182501.jpg" alt="">
+                    <img src="assets/img/gallery/IMG_20230716_182501.jpg" alt="Navakkani house">
                   </div>
               </div>
               <div class="item">
                   <div class="img-thumb">
-                    <img src="assets/img/gallery/2022_09_17_3.jpeg" alt="">
+                    <img src="assets/img/gallery/2022_09_17_3.jpeg" alt="oddanchatram house">
                   </div>
               </div>
               <div class="item">
                   <div class="img-thumb">
-                    <img src="assets/img/gallery/2022_09_17_4.jpeg" alt="">
+                    <img src="assets/img/gallery/2022_09_17_4.jpeg" alt="kallimandayam house">
                   </div>
               </div>
             </div>
@@ -349,7 +351,7 @@
               <div class="item">
                 <div class="testimonial-item">
                   <div class="img-thumb">
-                    <img src="assets/img/testimonial/img1.jpg" alt="">
+                    <img src="assets/img/testimonial/img1.jpg" alt="Selvaraj user">
                   </div>
                   <div class="info">
                     <h2><a href="#">Selvaraj</a></h2>
@@ -370,7 +372,7 @@
               <div class="item">
                 <div class="testimonial-item">
                   <div class="img-thumb">
-                    <img src="assets/img/testimonial/img6.jpg" alt="">
+                    <img src="assets/img/testimonial/img6.jpg" alt="Sudhan user">
                   </div>
                   <div class="info">
                     <h2><a href="#">Sudhan</a></h2>
@@ -391,7 +393,7 @@
               <div class="item">
                 <div class="testimonial-item">
                   <div class="img-thumb">
-                    <img src="assets/img/testimonial/img3.jpg" alt="">
+                    <img src="assets/img/testimonial/img3.jpg" alt="Senniappan">
                   </div>
                   <div class="info">
                     <h2><a href="#">Senniappan</a></h2>
@@ -412,7 +414,7 @@
               <div class="item">
                 <div class="testimonial-item">
                   <div class="img-thumb">
-                    <img src="assets/img/testimonial/img5.jpg" alt="">
+                    <img src="assets/img/testimonial/img5.jpg" alt="Karuppusamy">
                   </div>
                   <div class="info">
                     <h2><a href="#">Karuppusamy</a></h2>
