--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="welcome to Kaviees Construction, a trusted destination for builders and civil engineers. Best civil engineer in Ottanchatram. Experienced builder constructed over 20+ projects completed">
-    <meta name="keywords" content="Building Contractors, Builders, Civil Engineers, Infrastructure Development, Building Design, Commercial Construction, Renovation Services, Residential Construction, Civil Engineering Consultancy, Ottanchatram, oddanchatram, kallimandayam, odaipatti, house construction, house builders in Ottanchatram">
+    <meta name="description" content="Welcome to Kaviees Construction, a trusted destination for builders and civil engineers. Best civil engineer in Ottanchatram, Best individual house builders in Oddanchatram. Experienced builder constructed over 20+ projects completed">
+    <meta name="keywords" content="Building Contractors, Builders, Civil Engineers, Infrastructure Development, Building Design, Commercial Construction, Renovation Services, Residential Construction, Civil Engineering Consultancy, Ottanchatram, oddanchatram, Builders in Oddanchatram, Builders in Ottanchatram, Tamil Nadu, India, kallimandayam, odaipatti, house construction, house builders in Ottanchatram, Leading Builders, Best Home Builders in Oddanchatram">
     <link rel="canonical" href="http://kaviees.in/">
-    <title>Kaviees Construction</title>
+    <title>
+     Leading Builders In , Kaviees Construction,Top Builders in Oddanchatram,Best apartment builders in Oddanchatram,Best individual house builders in Oddanchatram,Best Home Builders in Oddanchatram, Best Home developers, Best civil engineers near Oddanchatram,Best civil engineers in Oddanchatram,Top Civil engineers in Oddanchatram,best building planners in Oddanchatram at low cost,Top 10 building planners in Oddanchatram,3d building elevation designing in Oddanchatram,Top building elevation designers,Best building elevation designer in Oddanchatram,3d elevation designing in Oddanchatram,house elevation designs in Oddanchatram, Top 5 structural design engineer in Oddanchatram,structural design near Oddanchatram, Tamil Nadu,Home renovation, remodeling in Oddanchatram,Building renovation contractors in Oddanchatram,house repair services in Oddanchatram,house renovation contractors in Oddanchatram ,Top building renovation contractors in Oddanchatram,old house renovation in Oddanchatram,House renovation in Oddanchatram ,Home Remodeling in Oddanchatram,building repair contractors near me,Building renovation works in Oddanchatram ,Best renovation contractors in Oddanchatram,building repair works in Oddanchatram, Ottanchatram.
+    </title>
+
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" >
@@ -29,12 +32,9 @@
   </head>
   <body>
 
-    <!-- Header Area wrapper Starts -->
     <header id="header-wrap">
-      <!-- Navbar Start -->
       <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar">
         <div class="container">
-          <!-- Brand and toggle get grouped for better mobile display -->
           <a href="index.html" class="navbar-brand"><img src="assets/img/logo_black.png" alt=""></a>       
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <i class="lni-menu"></i>
@@ -75,21 +75,19 @@
           </div>
         </div>
       </nav>
-      <!-- Navbar End -->
 
-      <!-- Hero Area Start -->
       <div id="hero-area" class="hero-area-bg">
         <div class="container">      
           <div class="row">
             <div class="col-lg-7 col-md-12 col-sm-12 col-xs-12">
               <div class="contents">
-                <h2 class="head-title">Building Dreams, Shaping Futures: Empowering the World through Engineering!</h2>
-                <p>Transforming blueprints into reality, I design safe, sustainable, and innovative infrastructure. My passion for problem-solving drives me to create lasting impact and enhance communities' lives. As a civil engineer, I shape a better future for generations to come.</p>
+                <h2 class="head-title">Welcome to Kaviees Construction, Best Builders in Oddanchatram!</h2>
+                <p>All kinds of civil works like 3d building elevation designing, interiors and consultation for our clients. We always seek new and better ways of economically fulfilling the needs of our clients. Since our buildings are the mirror which reflects us in society, we never compromise in the design & quality</p>
               </div>
             </div>
             <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12">
               <div class="intro-img">
-                <img class="img-fluid" src="assets/img/intro-mobile.png" alt="building">
+                <img class="img-fluid" src="https://cdni.iconscout.com/illustration/premium/thumb/construction-workers-building-house-4190456-3485677.png" alt="building">
               </div>            
             </div>
           </div> 
@@ -150,7 +148,7 @@
     <!-- Services Section End -->
 
     <!-- About Section start -->
-    <div class="about-area section-padding bg-gray">
+    <!-- <div class="about-area section-padding bg-gray">
       <div class="container">
         <div class="row">
           <div class="col-lg-6 col-md-12 col-xs-12 info">
@@ -174,7 +172,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- About Section End -->
 
     <!-- Features Section Start -->
@@ -458,6 +456,9 @@
             <ul class="address">
               <li>
                 <a href="#"><i class="lni-map-marker"></i> A1 Service Station - <br> Ottanchatram - 624619</a>
+              </li>
+              <li>
+                <a href="#"><i class="lni-map-marker"></i> Byepass Road - <br> Kallimandayam - 624616</a>
               </li>
               <li>
                 <a href="#"><i class="lni-phone-handset"></i> P: +91 99949 43201</a>
