Added more house images

--- a/index.html
+++ b/index.html
@@ -280,6 +280,36 @@
                     <img src="assets/img/gallery/2022_09_17_4.jpeg" alt="kallimandayam house">
                   </div>
               </div>
+              <div class="item">
+                <div class="img-thumb">
+                  <img src="assets/img/gallery/ambilikkai_commercial_building.jpeg" alt="Ambilikkai Commercial Building">
+                </div>
+              </div>
+              <div class="item">
+                <div class="img-thumb">
+                  <img src="assets/img/gallery/awesome_house_design1.jpeg" alt="Ambilikkai house">
+                </div>
+              </div>
+              <div class="item">
+                <div class="img-thumb">
+                  <img src="assets/img/gallery/beautiful_house_design.jpeg" alt="Beautifull House Design">
+                </div>
+              </div>
+              <div class="item">
+                <div class="img-thumb">
+                  <img src="assets/img/gallery/house_images.jpeg" alt="kallimandayam house">
+                </div>
+              </div>
+              <div class="item">
+                <div class="img-thumb">
+                  <img src="assets/img/gallery/house_warming_image.jpeg" alt="kallimandayam house">
+                </div>
+              </div>
+              <div class="item">
+                <div class="img-thumb">
+                  <img src="assets/img/gallery/work-in-progress_roof.jpeg" alt="kallimandayam house">
+                </div>
+              </div>
             </div>
           </div>
         </div>
